--- a/index.html
+++ b/index.html
@@ -9,8 +9,16 @@
   <body>
     <h1>World Clock</h1>
     <footer>
-      This project was coded by <a href="" target="_blank">Camila Matos</a> and
-      it is open sourced on <a href="" target="_blank">GitHub</a>.
+      This project was coded by
+      <a href="https://www.linkedin.com/in/camilaselemem/" target="_blank"
+        >Camila Matos</a
+      >
+      and it is open sourced on
+      <a
+        href="https://github.com/camilaselemem/world-clock-project"
+        target="_blank"
+        >GitHub</a
+      >.
     </footer>
     <script src="javascript/index.js"></script>
   </body>
