--- a/index.html
+++ b/index.html
@@ -7,7 +7,26 @@
     <title>World Clock - Camila Matos</title>
   </head>
   <body>
-    <h1>World Clock</h1>
+    <div class="container">
+      <h1>World Clock</h1>
+
+      <select>
+        <option value="">Select a city</option>
+        <option value="">London</option>
+        <option value="">New York</option>
+        <option value="">Auckland</option>
+      </select>
+
+      <div class="city"></div>
+      <h2>Los Angeles 🇺🇸</h2>
+      <div class="date">August 15th 2022</div>
+      <div class="time">1:48:15 AM</div>
+
+      <div class="city"></div>
+      <h2>Sydney 🇦🇺</h2>
+      <div class="date">August 15th 2022</div>
+      <div class="time">1:48:15 AM</div>
+    </div>
     <footer>
       This project was coded by
       <a href="https://www.linkedin.com/in/camilaselemem/" target="_blank"
@@ -18,7 +37,7 @@
         href="https://github.com/camilaselemem/world-clock-project"
         target="_blank"
         >GitHub</a
-      >.
+      >
     </footer>
     <script src="javascript/index.js"></script>
   </body>
